#####################################################################
# Target level CMakeLists.txt file
#####################################################################

#-- targets
add_executable(array-using-smart-ptr src/array-using-smart-ptr.cpp)
add_executable(extend-std-containers src/extend-std-containers.cpp)
